# universal-text-extractor

./: .env.example  .gitignore  .gitlab-ci.yml  .replit  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_SUMMARY.md  Dockerfile  ENHANCED_PROCESSING_SUMMARY.md  LICENSE  QUICK_START.md  README.md  app.py  deployment_guide.md  docker-compose.prod.yml  docker-compose.yml  health_check.py  jupyter_example.ipynb  package_for_deployment.sh  prepare_for_gitlab.sh  pyproject.toml  requirements.txt  text_extractor_api.py  usage_statistics.csv  usage_statistics.json  users.json
.streamlit/: config.toml
attached_assets/: Pasted-import-os-import-importlib-import-ipywidgets-as-widgets-from-IPython-display-import-display-clear-o-1748012441392.txt
data/: text_extractor.db
scripts/: backup.sh  install.bat  install.sh  maintenance.sh  restore.sh  start.bat  start.sh
utils/: __init__.py  analytics.py  auth.py  auth_db.py  data_management.py.bak  database.py  database.py.bak  database_fix.py  export_utils.py  file_handlers.py  image_processing.py  ocr_utils.py
